--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				</ic-spinner>
 			</div>
 
-			<h1><ic-text-logo><span>Info</span><span>Compass</span></ic-text-logo></ic-text-logo></h1>
+			<h1>Prosper</h1>
 			<br/>
 			<div ng-show = "error" class = "ng-hide error">
 					{{error}}
