--- a/pages/main.html
+++ b/pages/main.html
@@ -8,6 +8,17 @@
 	class = "tiles"
 >
 
+
+	<a
+		ng-href 	= "#{{icSite.getNewPath({s: 'RefuComm'}, true)}}"
+		ic-tile
+		ic-title	= "target_group | prepend : 'TARGET_GROUPS.' | uppercase | translate"
+		ic-brief	= "'INTERFACE.TARGET_GROUP' |translate"
+		ic-type		= "'events'"
+	></a>
+
+
+
 <!-- 	
 
 	<a
