--- a/pages/main.html
+++ b/pages/main.html
@@ -12,8 +12,7 @@
 	<a
 		ng-href 	= "#{{icSite.getNewPath({s: 'RefuComm'}, true)}}"
 		ic-tile
-		ic-title	= "target_group | prepend : 'TARGET_GROUPS.' | uppercase | translate"
-		ic-brief	= "'INTERFACE.TARGET_GROUP' |translate"
+		ic-title	= "'RefuComm'"
 		ic-type		= "'events'"
 	></a>
 
