--- a/pages/main.html
+++ b/pages/main.html
@@ -13,7 +13,7 @@
 		ng-repeat	= "term in ['RefuComm', 'Rafiqi','Street Kitchen','refugeeswork', 'art without borders', 'Mapfugees', 'Greece Volunteer Info', 'InfoCompass', 'NaTakallam', 'Lifting Hands International']"   
 		ng-href 	= "#{{icSite.getNewPath({s: term}, true)}}"
 		ic-tile
-		ic-title	= "'RefuComm'"
+		ic-title	= "term"
 		ic-type		= "'places'"
 	></a>
 
