--- a/pages/main.html
+++ b/pages/main.html
@@ -3,34 +3,13 @@
 	<h2>{{'INTERFACE.CLAIM' | translate}}</h2>
 </div>
 
-<div
-	no-text-nodes 
-	class = "tiles"
->
 
+<ic-search				
+	ng-class 			= "{'ic-hide':!icOverlays.show.search}"
+	class 				= "white right"
+	ic-on-update 		= "icOverlays.toggle('search')" 
+></ic-search>
 
-	<a
-		ng-repeat	= "term in ['RefuComm', 'Rafiqi','Street Kitchen','refugeeswork', 'art without borders', 'Mapfugees', 'Greece Volunteer Info', 'InfoCompass', 'NaTakallam', 'Lifting Hands International']"   
-		ng-href 	= "#{{icSite.getNewPath({s: term}, true)}}"
-		ic-tile
-		ic-title	= "term"
-		ic-type		= "'places'"
-	></a>
-
-
-
-<!-- 	
-
-	<a
-		ng-repeat	= "target_group in icConfigData.targetGroups"
-		ng-href 	= "#{{icSite.getNewPath({tg: target_group}, true)}}"
-		ic-tile
-		ic-title	= "target_group | prepend : 'TARGET_GROUPS.' | uppercase | translate"
-		ic-brief	= "'INTERFACE.TARGET_GROUP' |translate"
-		ic-type		= "::Mock.random(['events', 'services', 'places', 'information'], $index+1)"
-	></a>
- -->
-	
-
+<div class ="disclaimer">
+	{{'INTERFACE.DISCLAIMER' | translate }}
 </div>
-
