--- a/pages/main.html
+++ b/pages/main.html
@@ -1,13 +1,13 @@
 <div class = "logo">
-	<h1><ic-text-logo></ic-text-logo></h1>
+        <h1><a href="http:prosper.community"><ic-text-logo></ic-text-logo></a></h1>
 	<h2>{{'INTERFACE.CLAIM' | translate}}</h2>
 </div>
 
 
-<ic-search				
-	ng-class 			= "{'ic-hide':!icOverlays.show.search}"
-	class 				= "white right"
-	ic-on-update 		= "icOverlays.toggle('search')" 
+<ic-search
+	ng-class 	= "{'ic-hide':!icOverlays.show.search}"
+	class 		= "white right"
+	ic-on-update 	= "icOverlays.toggle('search')"
 ></ic-search>
 
 <div class ="disclaimer">
