--- a/pages/main.html
+++ b/pages/main.html
@@ -1,5 +1,5 @@
 <div class = "logo">
-        <h1><a href="http:prosper.community"><ic-text-logo></ic-text-logo></a></h1>
+        <h1><a href="http://prosper.community"><ic-text-logo></ic-text-logo></a></h1>
 	<h2>{{'INTERFACE.CLAIM' | translate}}</h2>
 </div>
 
